--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -1,14 +1,14 @@
 .header {
   box-shadow: 0 10px 10px rgba(0, 0, 0, .05);
 
-  &--mobile {
+  &-mobile {
     display: block;
     @include atMedium {
       display: none;
     }
   }
 
-  &--desktop {
+  &-desktop {
     display: none;
     @include atMedium {
       display: block;
@@ -111,7 +111,7 @@
 
 }
 
-.button__burger {
+.button-burger {
   cursor: pointer;
 
   div {
@@ -122,9 +122,10 @@
   }
 
   & > div {
-    transition: .2s;
+    transition: 0;
   }
   
+  /* animation
   &--toggle {
     & .line1 {
       transform: rotate(-45deg) translate(-3px, 6px);
@@ -136,4 +137,5 @@
       transform: rotate(45deg) translate(-3px, -6px);
     }
   }
+  */
 }
