--- a/source/stylesheets/base/_normalize.scss
+++ b/source/stylesheets/base/_normalize.scss
@@ -37,9 +37,9 @@ main {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1 {
-  font-size: 2em;
-}
+// h1 {
+//   font-size: 2em;
+// }
 
 /* Grouping content
    ========================================================================== */
