--- a/source/stylesheets/layout/_body.scss
+++ b/source/stylesheets/layout/_body.scss
@@ -1,3 +1,11 @@
 body {
   background-color: #f7f7f7;
 }
+
+.content-area {
+  padding: 16px 0;
+  
+  @include atMedium {
+    padding: 32px 0;
+  }
+}
