--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -99,6 +99,7 @@
         border-radius: 50%;
 
         line-height: 1.4;
+        text-align: center;
         font-weight: 600;
         color: $purple400;
 
