--- a/source/stylesheets/components/_simple-product.scss
+++ b/source/stylesheets/components/_simple-product.scss
@@ -23,6 +23,39 @@
   }
 }
 
+// product card responsivity
+.woocommerce ul.products, .woocommerce-page ul.products {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -16px;
+  
+  @media (min-width: 576px) {
+    margin-right: -32px;
+  }
+  
+  @include atSmall {
+    margin-right: -16px;
+  }
+  
+  & li.product, & li.last {
+    margin: 0 16px 24px 0 !important;
+    flex: 1 1 40%;
+    max-width: 46%;
+    @include atSmall {
+      flex: 1 1 30%;
+      max-width: 31.1%;
+    }
+    @include atMedium {
+      flex: 1 1 30%;
+      max-width: 31.7%;
+    }
+    @include atLarge {
+      flex: 1 1 20%;
+      max-width: 23.6%;
+    }
+  }
+}
+
 // product card title
 .woocommerce ul.products li.product .woocommerce-loop-category__title,
 .woocommerce ul.products li.product .woocommerce-loop-product__title,
