--- a/source/stylesheets/components/_table.scss
+++ b/source/stylesheets/components/_table.scss
@@ -13,7 +13,7 @@
   background-color: #fff;
   box-shadow: 0 10px 10px rgba(0, 0, 0, .05);
   
-  tr td {
+  tr th, tr td  {
     padding: 20px;
   }
 }
