--- a/source/stylesheets/components/_module.scss
+++ b/source/stylesheets/components/_module.scss
@@ -1,12 +1,13 @@
 @import 'buttons';
-@import 'carousel';
 @import 'cover';
 @import 'dropdown';
+@import 'nav';
 @import 'input';
+@import 'card';
+@import 'table';
+@import 'carousel';
 @import 'search-form';
 @import 'star-rating';
-@import 'table';
-@import 'nav';
 @import 'side-cart';
 @import 'category-menu';
 @import 'simple-product';
