--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -12,17 +12,21 @@ a {
 }
 
 h1:not(.header__logo) {
+  color: $purple400;
   font-size: 2rem;
-  padding: .5em 0;
+  margin-bottom: .5em;
 }
 
 h2 {
+  color: $purple400;
   font-size: 1.5rem;
+  margin-bottom: .5em;
 }
 
 h3 {
+  color: $purple400;
   font-size: 1.5rem;
-  padding: .5em 0;
+  margin-bottom: .5em;
 }
 
 .home main .section-title {
