--- a/source/stylesheets/components/_table.scss
+++ b/source/stylesheets/components/_table.scss
@@ -4,25 +4,20 @@
 
 // table head
 .woocommerce table.shop_table thead {
-  background-color: $purple400;
-  color: #fff;
+  background-color: #fff;
+  color: $black;
+  th {
+    padding: 8px;
+  }
 }
 
+// table body / foot
 .woocommerce table.shop_table tbody,
 .woocommerce table.shop_table tfoot {
   background-color: #fff;
   box-shadow: 0 10px 10px rgba(0, 0, 0, .05);
   
   tr th, tr td  {
-    padding: 20px;
-  }
-}
-
-/*
-  make the table row divisions more clear in small devices
-*/
-.woocommerce table.shop_table_responsive tr, .woocommerce-page table.shop_table_responsive tr {
-  @include untilSmall {
-    border-bottom: 1px solid #ccc;
+    padding: 8px;
   }
 }
